feat:client and server advancements
